デッドロックサンプル

--- a/C#/データベース接続サンプル.md
+++ b/C#/データベース接続サンプル.md
@@ -349,3 +349,76 @@ private void Execute()
     // string constr = $@"Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename={System.IO.Path.GetFullPath(@"..\..\..\Database1.mdf")};Integrated Security=True";
     SqlConnection con = new SqlConnection(constr);
 ```
+
+---
+
+## 1つのコネクションの中で並列して処理を実行することはできるか？
+
+A.できない。  
+
+デッドロックではなさそうだけど、処理が明らかに止まり、しばらくしたらタイムアウトエラーになる。  
+それぞれコネクションをopenして並列して実行する分には問題ないことが分かった。  
+
+``` txt : エラー内容
+内部例外 1:
+Win32Exception: 待ち操作がタイムアウトになりました。
+```
+
+``` C# : ①
+    using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
+    {
+        // データベース接続
+        connection.Open();
+        // テーブルの生成と初期データを準備
+        CreateTable(connection);
+        Insert(connection);
+        // 1つのコネクションで並列実行→エラー
+        Task.WaitAll(
+           Task.Run(() => Read1(connection)),
+           Task.Run(() => Read2(connection))
+        );
+    }
+```
+
+``` C# : ②
+    using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
+    {
+        // データベース接続
+        connection.Open();
+        // テーブルの生成と初期データを準備
+        CreateTable(connection);
+        Insert(connection);
+    }
+    // ②コネクションを張りなおすが、相変わらず1つのコネクションを使って並列実行 → エラー
+    using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
+    {
+       connection.Open();
+       Task.WaitAll(
+           Task.Run(() => Read1(connection)),
+           Task.Run(() => Read2(connection))
+       );
+    }
+```
+
+``` C# : OKパターン
+    // テーブルの生成と初期データを準備済みの体
+
+    // それぞれでコネクションを張って並列実行 → OK
+    Task.WaitAll(
+        Task.Run(() =>
+        {
+            using (SqlConnection connection = new SqlConnection(builder.ConnectionString)){
+                connection.Open();
+                Read1(connection);
+            }
+        }),
+        Task.Run(() =>
+        {
+            using (SqlConnection connection = new SqlConnection(builder.ConnectionString)){
+                connection.Open();
+                Read2(connection);
+            }
+        })
+    );
+
+```
