--- a/DB・SQL/デッドロック/意図的にデッドロックを発生させる.md
+++ b/DB・SQL/デッドロック/意図的にデッドロックを発生させる.md
@@ -3,7 +3,14 @@
 [Oracle DBでDEAD LOCKをさくっと発生させる](https://tomoima525.hatenablog.com/entry/2013/12/19/201157)  
 [デッドロックについて説明してみる - その 2 ( C# で deadlock を例外処理でキャッチしてみる ) -][https://ryuchan.hatenablog.com/entry/2016/10/16/173225]  
 
+---
+
+## クライアントで発生させる場合
+
+まず適当なデータベース作って、テーブルとデータを用意する。  
+
 ``` sql
+-- テーブル生成
 DROP TABLE IF EXISTS [TEST_TBL1];
 DROP TABLE IF EXISTS [TEST_TBL2];
 CREATE TABLE [TEST_TBL1] ( 
@@ -15,7 +22,7 @@ CREATE TABLE [TEST_TBL2] (
     Name NVARCHAR(50) 
 ); 
 
-
+-- データ生成
 INSERT [TEST_TBL1] (ID, Name) 
 VALUES
     (1,'test001'),
@@ -24,9 +31,13 @@ INSERT [TEST_TBL2] (ID, Name)
 VALUES
     (1,'test001'),
     (2,'test002');
+```
 
--- 別々のタブを開いて別々に実行する
--- まずこっちを実行してから
+次に①、②でそれぞれタブを開いて①、②の順に実行する。  
+そうすると発生する。  
+
+``` sql : ①
+-- ①まずこっちを実行してから
 BEGIN TRAN
 UPDATE [TEST_TBL1]
 SET [Name] = 'aaaaa'
@@ -38,8 +49,10 @@ UPDATE [TEST_TBL2]
 SET [Name] = 'bbbbb'
 WHERE ID = 2;
 COMMIT TRAN
+```
 
--- こっちを実行する
+``` sql : ②
+-- ②こっちを実行する
 BEGIN TRAN
 UPDATE [TEST_TBL2]
 SET [Name] = 'ccccc'
@@ -51,4 +64,279 @@ UPDATE [TEST_TBL1]
 SET [Name] = 'dddd'
 WHERE ID = 2;
 COMMIT TRAN
+```
+
+---
+
+## コードで発生させる1
+
+Database1というローカルDB作って、プログラムを流せば発生する。  
+
+``` C#
+    static void Execute()
+    {
+        // 接続文字列の構築
+        SqlConnectionStringBuilder builder = new SqlConnectionStringBuilder
+        {
+            DataSource = @"(LocalDB)\MSSQLLocalDB",
+            AttachDBFilename = System.IO.Path.GetFullPath(@"..\..\Database1.mdf"),
+            IntegratedSecurity = true,
+        };
+        // 接続オブジェクト生成
+        using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
+        {
+            // データベース接続
+            connection.Open();
+            // テーブルの作成
+            new Action(() =>
+            {
+                Console.WriteLine("テーブルを作成");
+                StringBuilder query = new StringBuilder()
+                    .AppendLine("DROP TABLE IF EXISTS [TEST_TBL1];")
+                    .AppendLine("DROP TABLE IF EXISTS [TEST_TBL2];")
+                    .AppendLine("CREATE TABLE [TEST_TBL1] ( ")
+                    .AppendLine("    ID INT NOT NULL PRIMARY KEY, ")
+                    .AppendLine("    Name NVARCHAR(50) ")
+                    .AppendLine("); ")
+                    .AppendLine("CREATE TABLE [TEST_TBL2] ( ")
+                    .AppendLine("    ID INT NOT NULL PRIMARY KEY, ")
+                    .AppendLine("    Name NVARCHAR(50) ")
+                    .AppendLine("); ");
+                using (SqlCommand command = new SqlCommand(query.ToString(), connection) { CommandTimeout = 60000 })
+                {
+                    command.ExecuteNonQuery();
+                    Console.WriteLine("テーブル作成完了");
+                    Console.WriteLine();
+                }
+            }).Invoke();
+            // 初期データ挿入
+            new Action(() =>
+            {
+                StringBuilder query = new StringBuilder()
+                    .AppendLine("INSERT [TEST_TBL1] (ID, Name) ")
+                    .AppendLine("VALUES")
+                    .AppendLine("    (1,'test001'),")
+                    .AppendLine("    (2,'test002');")
+                    .AppendLine("INSERT [TEST_TBL2] (ID, Name) ")
+                    .AppendLine("VALUES")
+                    .AppendLine("    (1,'test001'),")
+                    .AppendLine("    (2,'test002');");
+                using (SqlCommand command = new SqlCommand(query.ToString(), connection) { CommandTimeout = 60000 })
+                {
+                    int rowsAffected = command.ExecuteNonQuery();
+                    Console.WriteLine(rowsAffected + " 行 挿入されました。");
+                    Console.WriteLine();
+                }
+            }).Invoke();
+        }
+
+        Task.WaitAll(Task.Run(Task1), Task.Run(Task2));
+
+        void Task1()
+        {
+            Console.WriteLine("UpdateTask1");
+            int counter = 0;
+            // 接続オブジェクト生成
+            using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
+            {
+                // データベース接続
+                connection.Open();
+
+                using (SqlCommand command = new SqlCommand() { CommandTimeout = 60000 })
+                {
+                    while (true)
+                    {
+                        try
+                        {
+                            using (SqlTransaction transaction = connection.BeginTransaction("query1"))
+                            {
+                                command.Connection = connection;
+                                command.Transaction = transaction;
+
+                                command.CommandText = new StringBuilder()
+                                    .AppendLine("UPDATE [TEST_TBL1]")
+                                    .AppendLine("SET [Name] = 'aaaaa'")
+                                    .AppendLine("WHERE ID = 2;")
+                                    .ToString();
+                                command.ExecuteNonQuery();
+
+                                command.CommandText = new StringBuilder()
+                                    .AppendLine("UPDATE [TEST_TBL1]")
+                                    .AppendLine("SET [Name] = 'bbbbb'")
+                                    .AppendLine("WHERE ID = 1;")
+                                    .ToString();
+                                command.ExecuteNonQuery();
+
+                                transaction.Commit();
+                                transaction.Dispose();
+
+                                counter++;
+                                Console.WriteLine($"query1: {counter}");
+                                if (counter >= 200)
+                                {
+                                    break;
+                                }
+                            };
+                        }
+                        catch (SqlException ex)
+                        {
+                            Console.WriteLine($"query1エラー");
+                            Console.WriteLine("エラーNo:" + ex.Number.ToString());
+                            Console.WriteLine("エラーメッセージ：" + ex.Message.ToString());
+                            return;
+                        }
+                    }
+                }
+            }
+        }
+
+        void Task2()
+        {
+            Console.WriteLine("UpdateTask2");
+            int counter = 0;
+            // 接続オブジェクト生成
+            using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
+            {
+                // データベース接続
+                connection.Open();
+
+                using (SqlCommand command = new SqlCommand() { CommandTimeout = 60000 })
+                {
+                    while (true)
+                    {
+                        try
+                        {
+                            using (SqlTransaction transaction = connection.BeginTransaction("query2"))
+                            {
+                                command.Connection = connection;
+                                command.Transaction = transaction;
+
+                                command.CommandText = new StringBuilder()
+                                    .AppendLine("UPDATE [TEST_TBL1]")
+                                    .AppendLine("SET [Name] = 'ccccc'")
+                                    .AppendLine("WHERE ID = 1;")
+                                    .ToString();
+                                command.ExecuteNonQuery();
+
+                                command.CommandText = new StringBuilder()
+                                    .AppendLine("UPDATE [TEST_TBL1]")
+                                    .AppendLine("SET [Name] = 'ddddd'")
+                                    .AppendLine("WHERE ID = 2;")
+                                    .ToString();
+                                command.ExecuteNonQuery();
+
+                                transaction.Commit();
+                                transaction.Dispose();
+
+                                counter++;
+                                Console.WriteLine($"query2: {counter}");
+                                if (counter >= 200)
+                                {
+                                    break;
+                                }
+                            }
+                        }
+                        catch (SqlException ex)
+                        {
+                            Console.WriteLine($"query2エラー");
+                            Console.WriteLine("エラーNo:" + ex.Number.ToString());
+                            Console.WriteLine("エラーメッセージ：" + ex.Message.ToString());
+                            return;
+                        }
+                    }
+                }
+            }
+        }
+
+        Console.WriteLine("処理終了");
+        Console.ReadLine();
+    }
+```
+
+---
+
+## コードで発生させる2
+
+クエリをそのままコードに落とし込んだ例。  
+コード上でトランザクションを切らなくても発生させることができる模様。  
+
+``` C#
+    // Task1から始めて欲しいので、DelayしてTask2のスタートを遅らせる
+    var Task1 = Task.Run(UpdateTask1);
+    Task.Delay(100);
+    var Task2 = Task.Run(UpdateTask2);
+    Task.WaitAll(Task1, Task2);
+
+    void UpdateTask1()
+    {
+        Console.WriteLine("UpdateTask1");
+        // 接続オブジェクト生成
+        using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
+        {
+            // データベース接続
+            connection.Open();
+            StringBuilder query = new StringBuilder()
+                .AppendLine("BEGIN TRAN")
+                .AppendLine("UPDATE [TEST_TBL1]")
+                .AppendLine("SET [Name] = 'aaaaa'")
+                .AppendLine("WHERE ID = 2;")
+                .AppendLine("WAITFOR DELAY '00:00:05';")
+                .AppendLine("UPDATE [TEST_TBL2]")
+                .AppendLine("SET [Name] = 'bbbbb'")
+                .AppendLine("WHERE ID = 2;")
+                .AppendLine("COMMIT TRAN");
+            using (SqlCommand command = new SqlCommand(query.ToString(), connection) { CommandTimeout = 60000 })
+            {
+                try
+                {
+                    int rowsAffected = command.ExecuteNonQuery();
+                    Console.WriteLine(rowsAffected + " 行 更新されました。");
+                    Console.WriteLine();
+                }
+                catch (SqlException ex)
+                {
+                    Console.WriteLine($"query1エラー");
+                    Console.WriteLine("エラーNo:" + ex.Number.ToString());
+                    Console.WriteLine("エラーメッセージ：" + ex.Message.ToString());
+                    return;
+                }
+            }
+        }
+    }
+
+    void UpdateTask2()
+    {
+        Console.WriteLine("UpdateTask2");
+        using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
+        {
+            // データベース接続
+            connection.Open();
+            StringBuilder query = new StringBuilder()
+                .AppendLine("BEGIN TRAN")
+                .AppendLine("UPDATE [TEST_TBL2]")
+                .AppendLine("SET [Name] = 'ccccc'")
+                .AppendLine("WHERE ID = 2;")
+                .AppendLine("WAITFOR DELAY '00:00:03';")
+                .AppendLine("UPDATE [TEST_TBL1]")
+                .AppendLine("SET [Name] = 'ddddd'")
+                .AppendLine("WHERE ID = 2;")
+                .AppendLine("COMMIT TRAN");
+            using (SqlCommand command = new SqlCommand(query.ToString(), connection) { CommandTimeout = 60000 })
+            {
+                try
+                {
+                    int rowsAffected = command.ExecuteNonQuery();
+                    Console.WriteLine(rowsAffected + " 行 更新されました。");
+                    Console.WriteLine();
+                }
+                catch (SqlException ex)
+                {
+                    Console.WriteLine($"query2エラー");
+                    Console.WriteLine("エラーNo:" + ex.Number.ToString());
+                    Console.WriteLine("エラーメッセージ：" + ex.Message.ToString());
+                    return;
+                }
+            }
+        }
+    }
 ```
