--- a/C#/データベース接続サンプル.md
+++ b/C#/データベース接続サンプル.md
@@ -343,10 +343,15 @@ private void Execute()
     SqlConnection connection = new SqlConnection(builder.ConnectionString);
 ```
 
-``` C# : ローカルDBへの接続文字列の構築 直接指定パターン
+``` C# : ローカルDBへの接続文字列の構築 直接指定パターン1
     //Data Source=(SQL Server のホスト名またはIPアドレス);Initial Catalog=(接続先データベース名);Connect Timeout=60;Persist Security Info=True;User ID=(SQL Serverに接続するユーザーID);Password=(ユーザーのパスワード)
     string constr = @"Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\~~~~~\LocalDB\SampleDatabase.mdf;Integrated Security=True";
-    // string constr = $@"Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename={System.IO.Path.GetFullPath(@"..\..\..\Database1.mdf")};Integrated Security=True";
+    SqlConnection con = new SqlConnection(constr);
+```
+
+``` C# : ローカルDBへの接続文字列の構築 直接指定パターン2
+    // 相対パスで指定するのもあり
+    string constr = $@"Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename={System.IO.Path.GetFullPath(@"..\..\SampleDatabase.mdf")};Integrated Security=True";
     SqlConnection con = new SqlConnection(constr);
 ```
 
@@ -356,7 +361,7 @@ private void Execute()
 
 A.できない。  
 
-デッドロックではなさそうだけど、処理が明らかに止まり、しばらくしたらタイムアウトエラーになる。  
+デッドロックではなさそうだけど、明らかに処理が止まり、しばらくしたらタイムアウトエラーになる。  
 それぞれコネクションをopenして並列して実行する分には問題ないことが分かった。  
 
 ``` txt : エラー内容
@@ -364,7 +369,7 @@ A.できない。
 Win32Exception: 待ち操作がタイムアウトになりました。
 ```
 
-``` C# : ①
+``` C# : NG①
     using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
     {
         // データベース接続
@@ -380,7 +385,7 @@ Win32Exception: 待ち操作がタイムアウトになりました。
     }
 ```
 
-``` C# : ②
+``` C# : NG②
     using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
     {
         // データベース接続
@@ -400,7 +405,7 @@ Win32Exception: 待ち操作がタイムアウトになりました。
     }
 ```
 
-``` C# : OKパターン
+``` C# : OK
     // テーブルの生成と初期データを準備済みの体
 
     // それぞれでコネクションを張って並列実行 → OK
@@ -420,5 +425,4 @@ Win32Exception: 待ち操作がタイムアウトになりました。
             }
         })
     );
-
 ```
