・トランザクション分離レベルまとめ ・他整理等

--- a/DB・SQL/DB設計/トランザクション分離レベル.md
+++ b/DB・SQL/DB設計/トランザクション分離レベル.md
@@ -1,10 +1,136 @@
-# トランザクション分離レベル
-
----
-
-## ダーティリード、ファントムリードと分離レベル
+# トランザクション分離レベルと関連概念
 
 [トランザクション分離レベルについてのまとめ](https://qiita.com/song_ss/items/38e514b05e9dabae3bdb)  
 [[RDBMS][SQL]トランザクション分離レベルについて極力分かりやすく解説](https://qiita.com/PruneMazui/items/4135fcf7621869726b4b)  
+[ダーティリード、リピータブルリード、ファントムリードをちゃんと理解してからトランザクション分離レベルを理解しよう](https://qiita.com/momotaro98/items/ad859ec2934ee98540fb)  
 
-READ UNCOMMITTED
+主にSelectにおける話。  
+
+---
+
+## トランザクション
+
+トランザクションとは、商取引、売買、執行、取扱、議事録などの意味を持つ英単語。  
+ITの分野では、取引記録などの意味の他に、ソフトウェアの処理方式の一つで、互いに関連・依存する複数の処理をまとめ、一体不可分の処理単位として扱うことを指す場合が多い。  
+
+[e-words](https://e-words.jp/w/%E3%83%88%E3%83%A9%E3%83%B3%E3%82%B6%E3%82%AF%E3%82%B7%E3%83%A7%E3%83%B3.html#:~:text=%E3%83%88%E3%83%A9%E3%83%B3%E3%82%B6%E3%82%AF%E3%82%B7%E3%83%A7%E3%83%B3%E3%81%A8%E3%81%AF%E3%80%81%E5%95%86%E5%8F%96%E5%BC%95%E3%80%81%E5%A3%B2%E8%B2%B7,%E3%82%92%E6%8C%87%E3%81%99%E5%A0%B4%E5%90%88%E3%81%8C%E5%A4%9A%E3%81%84%E3%80%82)  
+
+---
+
+## ACID特性
+
+データベースのトランザクション処理を行う上で必要不可欠とされる４つの性質(Atomicity・Consistency・Isolation・Durability)の頭文字を並べた言葉です。  
+ACID特性は、DBMSがもつトランザクションログの記録、ロールバックとロールフォワード、ロックなどを組み合わせて実現されています。  
+
+### Atomicity ： 原子性
+
+トランザクション内の処理がすべて実行されるか、または全く実行されないことを保証する性質。  
+
+### Consistency ： 一貫性
+
+トランザクションによりデータの矛盾が生じないこと。  
+常にデータベースの整合性が保たれていることを保証する性質。  
+
+### Isolation ： 独立性
+
+複数のトランザクションを同時に実行した場合と、順番に実行した場合の結果が等しくなることを保証する性質。  
+一般にロックなどをかけることで直列可能性を保証する。  
+隔離性と呼ばれる場合もある。  
+
+### Durability ： 永続性
+
+一旦正常終了したトランザクションの結果は、以後システムに障害が発生しても失われないことを保証する性質。  
+耐久性と呼ばれる場合もある。  
+
+---
+
+## 並列トランザクションに起因する問題・3種のリード現象
+
+### ダーティリード (Dirty Read)
+
+**別のトランザクションでコミットされてないデータが読み取れる現象**。  
+
+1. トランザクションAでレコードを①から②にUPDATE（未コミット）  
+2. トランザクションBでレコードをSELECTする  
+3. トランザクションAをロールバックする  
+4. トランザクションBで取得したデータは②となっている。  
+
+### ファジーリード/ノンリピータブルリード (Fuzzy Read / Non-Repeatable Read)
+
+**別のトランザクションで更新された(コミットされた)データを読むことにより、一貫性がなくなる現象**。  
+
+1. トランザクションAでレコードをSELECTする。①となっている。  
+2. トランザクションBでレコードを①から②にUPDATEし、COMMITする。  
+3. トランザクションAで同じレコードを再度SELECTする。②となっている。  
+
+トランザクション分離レベル知る前はそういうもんじゃんとか思っていたんだけど、2つのトランザクションが隔離されてないので使ってる側で気にしないといけない。  
+その時点で隔離性から離れてるんだよね。
+
+### ファントムリード (Phantom Read)
+
+**別のトランザクションで挿入された(コミットされた)データが見えることにより、一貫性がなくなる現象**。  
+
+1. トランザクションAでレコードをSELECTする。該当レコードがない。  
+2. トランザクションBでレコードをINSERTし、COMMITする。  
+3. トランザクションAでレコードをSELECTする。2でINSERTとしたレコードが取得できる。  
+
+ファジーリードとよく似ているがINSERTとUPDATEという点が違う。  
+また、以下もファントムリードとなる。  
+
+1. トランザクションAでレコードをCOUNTする。X件取得できた。  
+2. トランザクションBでレコードをINSERTし、COMMITする。  
+3. トランザクションAでレコードをCOUNTする。X+1件取得できた。  
+
+---
+
+## トランザクション分離レベル
+
+トランザクション分離レベルとは2つ以上のトランザクションの間同士でのお互いの操作の影響度合いを定義したものです。
+
+``` txt : 早見表
+分離レベル       | ダーティ | ファジー | ファントム
+-----------------+----------+----------+------------
+READ UNCOMMITTED |   ×     |    ×    |    ×
+READ COMMITTED   |   ○     |    ×    |    ×
+REPEATABLE READ  |   ○     |    ○    |    ×
+SERIALIZABLE     |   ○     |    ○    |    ○
+
+× : ダメ(発生しうる)
+○ : 大丈夫(発生しない)
+```
+
+### READ UNCOMMITTED
+
+- コミットされていない変更を他のトランザクションから参照できる設定  
+  - READ UNCOMMITTEDは一番低いレベル  
+  - ダーティリード、ファジーリード、ファントムリードが全て発生する  
+
+### READ COMMITTED
+
+- コミットされた変更を他のトランザクションから参照できる設定  
+  - Oracle、PostgreSQL、SQL Serverのデフォルトのトランザクション分離レベル  
+  - ファジーリード、ファントムリードが発生する  
+
+### REPEATABLE READ
+
+- コミットされた追加・削除を他のトランザクションから参照できる設定  
+  - MySQLのデフォルトのトランザクション分離レベル  
+  - ファントムリードが発生する  
+
+### SERIALIZABLE
+
+- 強制的にトランザクションを順序付けて処理する(直列化)一番高いトランザクション分離レベル。  
+  - 最も安全にデータを操作できるが、相対的に性能は低いため、めったに使われない。  
+  - SERIALIZABLEは読み取るすべての行に共有ロックをかける。  
+  - そのため、ダーティリード、ファジーリード、ファントムリード全てが発生しない。  
+
+---
+
+## デフォルトのトランザクション分離レベル
+
+``` txt
+MySQL(InnoDB) | REPEATABLE READ
+PostgreSQL    | READ COMMITTED
+Oracle        | READ COMMITTED
+SQL Server    | READ COMMITTED
+```
