--- a/DB・SQL/デッドロック/デッドロック.md
+++ b/DB・SQL/デッドロック/デッドロック.md
@@ -1,5 +1,9 @@
 # デッドロック
 
+共有資源を使用する2つ以上のトランザクションが、互いに相手トランザクションが必要とする資源を排他的に使用していて、互いのトランザクションが相手が使用している資源の解放を待っている状態です。  
+デッドロックが発生するとトランザクションは永遠に待ち状態になってしまうため、処理の続行ができなくなってしまいます。  
+一般的に双方のトランザクションで資源の専有順序が同じ場合にはデッドロックが発生しないことが知られています。  
+
 ---
 
 ## SQL Server のデッドロック対応
