--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -88,7 +88,7 @@ ilist list 違い
 [[C#]IEnumerableはListではない](https://7mc.org/2021/04/30/c_sharp_ienumerable_and_list.html)
 
 アクティブレポートの設定の仕方をまとめる。
-ダーティーリードあたりのロックの強度だったり、分離レベルだったりをまとめる。
+
 
 
 LEFT OUTER JOIN A
@@ -152,9 +152,6 @@ https://e-words.jp/w/CLR.html
 
 sql server 0埋め
 https://teratail.com/questions/40337
-
-C#で0埋めする方法
-https://santerabyte.com/c-sharp-zero-padding/
 
 C# foreach index
 https://ufcpp.net/blog/2016/12/tipsindexedforeach/
@@ -397,3 +394,5 @@ LINQ OrderBy 複数
 〆・赤伝
 〆・C# 配列
 〆・バニラのWPFで最小のMVVMサンプルを作ってみたい
+〆ダーティーリードあたりのロックの強度だったり、分離レベルだったりをまとめる。  
+
