--- a/DB・SQL/SQLServer/真偽値関係.md
+++ b/DB・SQL/SQLServer/真偽値関係.md
@@ -28,7 +28,7 @@ CONVERT,BITとは。
 -- 1件の有無で判定は十分なのでTOP1する。
 SELECT TOP 1
 CONVERT(BIT,COUNT([TestNumber])),
-CAST (COUNT([TestNumber])) AS BIT)
+CAST (COUNT([TestNumber]) AS BIT)
 FROM [Table]
 WHERE [Code] = @code
 ```
