・UI関係 ・デリゲート ・文字列関係

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -745,6 +745,19 @@ wpf livet 使い方
 
 ---
 
+## UIクイズ - 2つのうち、どちらか1つを選ぶUI
+
+[2つの選択肢のうちどちらか1つを選ぶためのUI](https://note.com/9b0sk/n/n1f76f5754a7e)  
+
+ラジオボタン  
+チェックボックス  
+トグルボタン(スイッチ)  
+ドロップダウン(コンボボックス)  
+
+それぞれどういうときに使うのがベストなのか。  
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
