ツイッターの拾い物まとめ

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -745,9 +745,9 @@ wpf livet 使い方
 
 ---
 
-## UIクイズ - 2つのうち、どちらか1つを選ぶUI
+## 2つの選択肢を表現するのに最適なUIは何か
 
-[2つの選択肢のうちどちらか1つを選ぶためのUI](https://note.com/9b0sk/n/n1f76f5754a7e)  
+[UIクイズ - 2つのうち、どちらか1つを選ぶUI](https://note.com/9b0sk/n/n1f76f5754a7e)  
 
 ラジオボタン  
 チェックボックス  
@@ -755,6 +755,25 @@ wpf livet 使い方
 ドロップダウン(コンボボックス)  
 
 それぞれどういうときに使うのがベストなのか。  
+
+---
+
+## Helper以上、Manager以下のちょうどいい英単語はあるか？
+
+Helperをまとめつつ、判定等を返す程度のクラス。  
+.NetはManagerという形で似たような機能をまとめているが、正直そこまでまとめているわけではない。  
+そういった場合のいい感じの英単語って何かないだろうか。  
+因みに.NetはHelperかManagerの2つしか見つけることができなかった。  
+
+名前って難しい。  
+英単語の必要性を感じる。  
+
+---
+
+## レビューに関して
+
+<https://twitter.com/komitsubo/status/1516544935423770624>
+>レビューはエンジニアの好き嫌いとか最近興味がある技術とかなどの思いの丈を語る為に提供されたしゃべり場ではなく、成果物の品質が基準に達しているかを確認する場という事が分かっていない人がホント多いなというが最近の感想。
 
 ---
 
