・整理 ・FlexGridやDatagridの行番号

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -758,6 +758,45 @@ wpf livet 使い方
 
 ---
 
+## Dataは複数形
+
+単数形はdatumらしい。
+
+---
+
+## 設計
+
+---
+
+## 行番号をつけたい
+
+[Simple way to display row numbers on WPF DataGrid](https://stackoverflow.com/questions/4661998/simple-way-to-display-row-numbers-on-wpf-datagrid)  
+
+DataGridにはAlternationIndexなるプロパティがあるのでいいけど、FlexGridのはないのでおとなしくCellFactory使うしかないみたい。  
+AlternationIndexで見事解決かと思ったが、Indexなので0から始まる。  
+バインドするついでに+1くらいできないかなと思ったが、できない模様。  
+素直にConverterを使えと行ってくる。  
+はぁ  
+
+wpf binding add two values
+
+``` xml
+<DataGrid
+    AlternationCount="{Binding Items.Count, RelativeSource={RelativeSource Self}}">
+    <DataGrid.Columns>
+        <DataGridTextColumn Width="10" Binding="{Binding AlternationIndex, RelativeSource={RelativeSource AncestorType=DataGridRow}, StringFormat=その1{0}をつかう}" />
+    </DataGrid.Columns>
+</DataGrid>
+```
+
+---
+
+## BindingのStringFormat
+
+[【WPF】Bindingと文字列を結合して表示する方法4選](https://threeshark3.com/binding-string-concat/)  
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
