・sqlアンチパターンまとめ ・整理

--- a/Trivia/雑学.md
+++ b/Trivia/雑学.md
@@ -1,9 +1,13 @@
 # 雑学
 
+---
+
 ## ヴィーガン
 
 完全菜食主義者のこと。
 卵や乳製品を含む、動物性食品を一切口にしない。
+
+---
 
 ## "Octo"berは何故10月なのか？何故8月じゃなかったのか
 
@@ -13,3 +17,18 @@
 >そして前153年から現1月に当たるJānuāriusが年始に設定されたことで結果的に順番が2つずつ後ろに動いたという感じです  
 
 ---
+
+## Androidスマホだけで書類を簡単にPDF化する方法
+
+写真から書類部分だけを抜き出してpdfにしたい。  
+書類部分を抜き出す機能を探しても全然なかったし、そのために新しくアプリを入れるのも嫌だった。  
+調べたらgoogleが既にやっていた。  
+
+[Androidスマホだけで書類を簡単にPDF化する方法](https://www.youtube.com/watch?v=DJHkj3-SwYU)  
+
+手順  
+
+1. スマホでグーグルドライブを開く  
+2. [+]ボタンを押してスキャンを選択  
+3. 撮影してチェックボタンを押す  
+4. 保存するとドライブにアップロードされる  
