・dbアンチパターン追加 ・整理

--- a/Other/技術的参考集.md
+++ b/Other/技術的参考集.md
@@ -1,8 +1,5 @@
 # 技術的参考集
 
-こういう記事をまとめる領域も作りたい。  
-という事で作った。  
-
 ---
 
 [ソフトウェアエンジニアと技術力](https://speakerdeck.com/soudai/developer-lifework)  
@@ -18,25 +15,8 @@
 [「Visual Studio」の中の人が作ったプログラマー向け十徳ナイフ「DevToys」](https://forest.watch.impress.co.jp/docs/news/1382919.html)  
 <https://twitter.com/_inductor_/status/1485571312383049731?t=HneO12g8gQeElaHUCh2Wkg&s=09>  
 
-[ディレクトリ構成図を書くときに便利な記号](https://qiita.com/paty-fakename/items/c82ed27b4070feeceff6)
-
-``` txt
-読み          文字
-
-たて        : │ ┃
-たてひだり  : ┨ ┥ ┤ ┫
-たてみぎ    : ┣ ┠ ┝ ├
-ひだりうえ  : ┌ ┏
-ひだりした  : └ ┗
-ふとわく    : ┗┻━┛ ┏┳━┓
-ほそわく    : └┴─┘ ┌┬─┐
-まんなか    : ┼ ╋ ┿ ╂
-みぎうえ    : ┐ ┓
-みぎした    : ┘ ┛
-よこ        : ─ ━
-よこうえ    : ┻ ┷ ┸ ┴
-よこした    : ┳　┯ ┰ ┬
-```
+[タブがメモ帳になる](https://otona-life.com/2022/07/08/126835/)  
+urlに入力 → `data:text/html,<html contenteditable>`  
 
 ---
 
