--- a/Other/業務用語など.md
+++ b/Other/業務用語など.md
@@ -182,12 +182,9 @@ fkdさん曰く
 事務上一番もとになる帳簿。  
 
 →  
-ECOの収入原簿印刷のアレ。  
+収入原簿印刷のアレ。  
 原簿では出てくるが収入原簿では市役所の小難しい話しかヒットしない。  
 俺は意味が知りたいのだが？  
-
-調べても出てこない。  
-恥を忍んで聞いてみるか。  
 
 ---
 
