--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -846,3 +846,11 @@ for (int i = 1 ; i < 0 ; i++) {
     _ = 1;
 }
 ```
+
+勉強したいことリスト
+
+・lru
+・livet
+・Bindingの書き方。プロパティ構文でプロパティに値を代入するやり方
+・xamlのTrigger周りの整理
+・xaml,livetのエラー
