タブの消化のためリンクとかまとめ

--- a/Japanese/言葉の意味.md
+++ b/Japanese/言葉の意味.md
@@ -122,4 +122,14 @@
 
 ## 勇み足(いさみあし)
 
-相撲(すもう)で、相手を土俵ぎわに追い詰めながら勢い余って自分から土俵外に足を出し、負けになること。転じて、勢いに乗って、（不注意な）やりすぎの失敗をすること。  
+相撲(すもう)で、相手を土俵ぎわに追い詰めながら勢い余って自分から土俵外に足を出し、負けになること。  
+転じて、勢いに乗って、（不注意な）やりすぎの失敗をすること。  
+
+---
+
+## 五月雨式(さみだれしき)
+
+五月雨式（読み：さみだれしき）とは「物事が断続的に行われること」を意味する言葉です。  
+ビジネスメールなどで「五月雨式に申し訳ございません」と記載があった場合には報告や連絡などが一度のメールで送りきらずに、2通、3通、4通・・・と何度かに分けて送ることをお詫びすることを意味しています。  
+
+[五月雨式とは？「五月雨式に申し訳ございません」のメールの使い方とは？](https://business-textbooks.com/mail-samidareshiki/)  
