--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -756,6 +756,27 @@ wpf livet 使い方
 
 それぞれどういうときに使うのがベストなのか。  
 
+### ラジオボタン(Radio Button)
+
+"男性／女性"のように、互いに排他的な複数の項目の中から1つだけを選択させる場合に使われるコントロールです。  
+試験のマークシートをイメージするとわかりやすいでしょう。  
+
+### ラジオボックス
+
+互いに排他的な幾つかの選択項目から一つを選ぶ。  
+
+### コンボボックス
+
+幾つかの選択項目から一つを選ぶときに，選択項目にないものはテキストボックスに入力する。  
+
+### リストボックス
+
+特定の項目を選択することによって表示される一覧形式の項目の中から一つを選ぶ。  
+
+### チェックボックス
+
+幾つかの項目について，それぞれの項目を選択するかどうかを指定する。  
+
 ---
 
 ## 設計
@@ -765,10 +786,12 @@ wpf livet 使い方
 ## 行番号をつけたい
 
 [Simple way to display row numbers on WPF DataGrid](https://stackoverflow.com/questions/4661998/simple-way-to-display-row-numbers-on-wpf-datagrid)  
+[DataGridに行番号を表示しよう](http://tawamuredays.blog.fc2.com/blog-entry-75.html)  
 
 DataGridにはAlternationIndexなるプロパティがあるのでいいけど、FlexGridのはないのでおとなしくCellFactory使うしかないみたい。  
 AlternationIndexで見事解決かと思ったが、Indexなので0から始まる。  
 バインドするついでに+1くらいできないかなと思ったが、できない模様。  
+それくらい何とかしてくれと思うのだが・・・。
 素直にConverterを使えと行ってくる。  
 はぁ  
 
