--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -192,7 +192,6 @@ C# send post
 ・外人の動画のやつまとめたい
 ・LPIC1のまとめ
 ・最小限のAPIをたたいて結果を取得するサンプルが欲しい。
-→職場のserviceadapterでもパクるか。
 ・最小限のAPI側のサンプルを作りたい。
 ・フロントはVueで実装したい。
 
@@ -396,3 +395,4 @@ LINQ OrderBy 複数
 〆・バニラのWPFで最小のMVVMサンプルを作ってみたい
 〆ダーティーリードあたりのロックの強度だったり、分離レベルだったりをまとめる。  
 
+〆・ASP.Net Core Web API + Vue axios 通信サンプル
