--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -759,23 +759,46 @@ wpf livet 使い方
 ### ラジオボタン(Radio Button)
 
 "男性／女性"のように、互いに排他的な複数の項目の中から1つだけを選択させる場合に使われるコントロールです。  
-試験のマークシートをイメージするとわかりやすいでしょう。  
 
-### ラジオボックス
-
-互いに排他的な幾つかの選択項目から一つを選ぶ。  
-
-### コンボボックス
-
-幾つかの選択項目から一つを選ぶときに，選択項目にないものはテキストボックスに入力する。  
-
-### リストボックス
-
-特定の項目を選択することによって表示される一覧形式の項目の中から一つを選ぶ。  
+- 対象となる選択肢の間に主従がなく概念的に等価  
+- 関係性としても並列なもの  
+- 選択肢が常に隠れずに見えているので、選択肢を並べて選びやすい場合  
+- 「メイン画像に指定」「サブ画像に指定」のように主従がある場合には妥当とは言えない  
 
 ### チェックボックス
 
 幾つかの項目について，それぞれの項目を選択するかどうかを指定する。  
+
+- ラベル文言が長め・説明的かつもう一方は明記が不要なもの  
+- 一方を選択することが、そのままもう一方を選択しないことになるのが明らかなケース  
+
+例えば「期限切れも表示」にチェックが入っているということは、チェックが入っていない場合にはそのまま「期限切れは表示しない」ことになります。  
+選択肢の文言がやや長めで説明的な場合にも向きます。  
+
+これをラジオボタンにした場合、「期限切れも表示」「期限切れは表示しない」となり、語尾以外は似たものになってしまう。  
+パッと見で分かりづらくなり、一字一句きちんと読んで判断する付加をユーザーにかけることになる。  
+
+### トグルボタン(スイッチ)  
+
+同じ一つの操作で二つの状態を交互に切り替えるような仕組みを「トグル」（toggle）というが、これを画面上のボタンやスイッチなどの操作要素に適用したものである。  
+
+設定画面で項目の有効・無効を切り替えるボタン、音声や動画の再生画面で再生・停止を切り替えるボタンなどでよく用いられる。  
+ボタンを見ただけで現在の状態が分かるよう、再生中は停止ボタン、停止中は再生ボタンというように状況に応じてボタンの表示状態も切り替わることが多い。  
+
+- アクティブ/非アクティブの概念を持つ  
+- 繰り返し行き来ができる表裏一体の物  
+
+一方がON（有効）、もう一方がOFF（無効）の概念がぴったりで、2つの間を繰り返し行き来が可能なものはまさにスイッチが適しています。  
+"男性／女性"のような行き来不可能な物は向いていない。  
+
+### コンボボックス(ドロップダウン)
+
+幾つかの選択項目から一つを選ぶときに，選択項目にないものはテキストボックスに入力する。  
+基本情報の時の説明はこうだったが、テキストボックスへの入力はあってもなくても。  
+
+- 3つ以上の選択の中から1つを選ぶ時に選択肢となる  
+- 2つのうちいずれかを選ぶ時に、これが最適というケースは基本的にない  
+- スペースの制約が強い時に、二者択一の選択をあえてドロップダウンにするというのはあり  
 
 ---
 
@@ -818,6 +841,39 @@ wpf binding add two values
 
 <https://twitter.com/komitsubo/status/1516544935423770624>
 >レビューはエンジニアの好き嫌いとか最近興味がある技術とかなどの思いの丈を語る為に提供されたしゃべり場ではなく、成果物の品質が基準に達しているかを確認する場という事が分かっていない人がホント多いなというが最近の感想。
+
+---
+
+## 匿名型（匿名クラス）を動的に作成する
+
+[.NET Core (C#) 匿名型（匿名クラス）を動的に作成する](https://marock.tokyo/2021/01/24/net-core-%E5%8C%BF%E5%90%8D%E5%9E%8B%EF%BC%88%E5%8C%BF%E5%90%8D%E3%82%AF%E3%83%A9%E3%82%B9%EF%BC%89%E3%82%92%E5%8B%95%E7%9A%84%E3%81%AB%E4%BD%9C%E6%88%90%E3%81%99%E3%82%8B/)  
+
+``` C#
+    // 動的に作成するプロパティ、値の組み合わせをDictionaryに登録
+    var dic = new Dictionary<string, string>
+    {
+        { "key1", "キー1" },
+        { "key2", "キー2" }
+    };
+
+    // 匿名型をDictionaryから作成
+    dynamic anonymousType = new ExpandoObject();
+    foreach (var item in dic)
+    {
+        ((IDictionary<string, object>)anonymousType).Add(item.Key, item.Value);
+    }
+    ((IDictionary<string, object>)anonymousType).Add("Key3", "キー3");
+    // 通常の匿名型
+    var test = new { key1 = "キー1", key2 = "キー2" };
+
+    // インテリセンスは効かない
+    Console.WriteLine(anonymousType.key1);  // キー1
+    Console.WriteLine(anonymousType.key2);  // キー2
+    Console.WriteLine(anonymousType.key3);  // キー3
+    // インテリセンスが効く
+    Console.WriteLine(test.key1);  // キー1
+    Console.WriteLine(test.key2);  // キー2
+```
 
 ---
 
