・匿名型の動的生成 ・整理

--- a/DB・SQL/SQLServer/文字列関係.md
+++ b/DB・SQL/SQLServer/文字列関係.md
@@ -71,7 +71,7 @@ GROUP BY TestID
 ```
 
 FOR XML PATHは指定したフィールドの要素をXMLタグで囲う動作をするらしい。  
-なので仮に`SELECT TOP 3 PlayerNo + ',' FROM TFr_Slip FOR xml path('a')`と書いた場合、  
+なので仮に`SELECT TOP 3 PlayerNo + ',' FROM SlipTable FOR xml path('a')`と書いた場合、  
 `<a>ABC202007250541,</a><a>ABC202007250541,</a><a>ABC202007250541,</a>`となる。  
 PATH('')とするのは、空白のタグで前後を囲う動作というわけだ。  
 
@@ -83,7 +83,7 @@ mysql系独自の関数見たいなので、他では使えない。
 SELECT
     SlipID,
     GROUP_CONCAT(PlayerNo,',') as PlayerNo
-FROM TFr_Slip
+FROM SlipTable
 GROUP BY SlipID
 ```
 
@@ -93,7 +93,7 @@ GROUP BY SlipID
 
 2021/10/12 Tue  
 
-`SELECT TOP 3 PlayerNo + ',' FROM TFr_Slip FOR xml path('')`だと`ABC202007250541,ABC202007250541,ABC202007250541,`となり、  
+`SELECT TOP 3 PlayerNo + ',' FROM SlipTable FOR xml path('')`だと`ABC202007250541,ABC202007250541,ABC202007250541,`となり、  
 最後にコロンがついてしまうので、消したいなってことでやった。  
 
 STUFF関数なるものを使うことで解決することができた。  
@@ -102,7 +102,7 @@ XML PATHのコロンの位置を先頭に持ってきて、先頭のコロンを
 
 ``` SQL
 -- 置換対象,開始位置、終了位置、置換文字
-SELECT STUFF( (SELECT TOP 3 ',' + PlayerNo FROM TFr_Slip FOR xml path('')) , 1 , 1 , '')
+SELECT STUFF( (SELECT TOP 3 ',' + PlayerNo FROM SlipTable FOR xml path('')) , 1 , 1 , '')
 -- ABC202007250541,ABC202007250541,ABC202007250541
 
 -- ABC202007250541,ABC202007250541,ABC202007250541
