--- a/Other/技術的参考集.md
+++ b/Other/技術的参考集.md
@@ -34,6 +34,17 @@ urlに入力 → `data:text/html,<html contenteditable>`
 
 [高卒30代未経験からモダン・フロントエンドエンジニアになった軌跡を全て書いていく](https://qiita.com/Yametaro/items/46aea37f10c7bec35df8)  
 
+[「“楽しくないけどお金のためにやる人”はやはり伸びない」まつもとゆきひろ氏が説く“プログラマーに向いている人”](https://logmi.jp/tech/articles/326846)  
+>実際にプログラミングをしてみて、それが楽しかったと思える人は適性があるんじゃないかなと思うんですね。  
+逆にそれに対して「楽しくはないけどお金のためにやるんだ」という人は、やはり伸びないんですよね。  
+「好きこそ物の上手なれ」ということわざもありますが、プログラミングを楽しいと感じられるかが適性なんじゃないかなと、私は今思っています。  
+>「こういうものを作りなさい」と言われてどう作ればいいんだろう、どういう変数の名前にしたらいいんだろう、どういうアルゴリズムを選んだらいいんだろうと決める余地が大きい場合は、責任もある一方で自分がコントロールというか制御したという意識が高まるのでモチベーションが上がりやすいんですって。  
+→  
+この部分だけが唯一、今の会社で楽しいと思えるところ。  
+何も管理されていないので自分で全て何とかしないといけない。  
+
+[不満は多いのに転職せず、圧倒的に「自己研鑽」しない日本人「会社辞めたい」と思った時、知っておきたい“強み”の見つけ方](https://logmi.jp/business/articles/326950)  
+
 ---
 
 ## 平均的プログラマ以前向けのスキルの指標
