--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -748,6 +748,7 @@ wpf livet 使い方
 ## 2つの選択肢を表現するのに最適なUIは何か
 
 [UIクイズ - 2つのうち、どちらか1つを選ぶUI](https://note.com/9b0sk/n/n1f76f5754a7e)  
+[ユーザーが選びやすいフォームのカタチを考えよう](https://atmarkit.itmedia.co.jp/fwcr/rensai/usability02/02.html)  
 
 ラジオボタン  
 チェックボックス  
@@ -806,74 +807,10 @@ wpf livet 使い方
 
 ---
 
-## 行番号をつけたい
-
-[Simple way to display row numbers on WPF DataGrid](https://stackoverflow.com/questions/4661998/simple-way-to-display-row-numbers-on-wpf-datagrid)  
-[DataGridに行番号を表示しよう](http://tawamuredays.blog.fc2.com/blog-entry-75.html)  
-
-DataGridにはAlternationIndexなるプロパティがあるのでいいけど、FlexGridのはないのでおとなしくCellFactory使うしかないみたい。  
-AlternationIndexで見事解決かと思ったが、Indexなので0から始まる。  
-バインドするついでに+1くらいできないかなと思ったが、できない模様。  
-それくらい何とかしてくれと思うのだが・・・。
-素直にConverterを使えと行ってくる。  
-はぁ  
-
-wpf binding add two values
-
-``` xml
-<DataGrid
-    AlternationCount="{Binding Items.Count, RelativeSource={RelativeSource Self}}">
-    <DataGrid.Columns>
-        <DataGridTextColumn Width="10" Binding="{Binding AlternationIndex, RelativeSource={RelativeSource AncestorType=DataGridRow}, StringFormat=その1{0}をつかう}" />
-    </DataGrid.Columns>
-</DataGrid>
-```
-
----
-
-## BindingのStringFormat
-
-[【WPF】Bindingと文字列を結合して表示する方法4選](https://threeshark3.com/binding-string-concat/)  
-
----
-
 ## レビューに関して
 
 <https://twitter.com/komitsubo/status/1516544935423770624>
 >レビューはエンジニアの好き嫌いとか最近興味がある技術とかなどの思いの丈を語る為に提供されたしゃべり場ではなく、成果物の品質が基準に達しているかを確認する場という事が分かっていない人がホント多いなというが最近の感想。
-
----
-
-## 匿名型（匿名クラス）を動的に作成する
-
-[.NET Core (C#) 匿名型（匿名クラス）を動的に作成する](https://marock.tokyo/2021/01/24/net-core-%E5%8C%BF%E5%90%8D%E5%9E%8B%EF%BC%88%E5%8C%BF%E5%90%8D%E3%82%AF%E3%83%A9%E3%82%B9%EF%BC%89%E3%82%92%E5%8B%95%E7%9A%84%E3%81%AB%E4%BD%9C%E6%88%90%E3%81%99%E3%82%8B/)  
-
-``` C#
-    // 動的に作成するプロパティ、値の組み合わせをDictionaryに登録
-    var dic = new Dictionary<string, string>
-    {
-        { "key1", "キー1" },
-        { "key2", "キー2" }
-    };
-
-    // 匿名型をDictionaryから作成
-    dynamic anonymousType = new ExpandoObject();
-    foreach (var item in dic)
-    {
-        ((IDictionary<string, object>)anonymousType).Add(item.Key, item.Value);
-    }
-    ((IDictionary<string, object>)anonymousType).Add("Key3", "キー3");
-    // 通常の匿名型
-    var test = new { key1 = "キー1", key2 = "キー2" };
-
-    // インテリセンスは効かない
-    Console.WriteLine(anonymousType.key1);  // キー1
-    Console.WriteLine(anonymousType.key2);  // キー2
-    Console.WriteLine(anonymousType.key3);  // キー3
-    // インテリセンスが効く
-    Console.WriteLine(test.key1);  // キー1
-    Console.WriteLine(test.key2);  // キー2
-```
 
 ---
 
