・MultiTrigger ・MultiTriggerとMultiDataTrigger ・ContinueWith

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -759,11 +759,18 @@ wpf livet 使い方
 
 ### ラジオボタン(Radio Button)
 
+[1] 基本情報説明  
 "男性／女性"のように、互いに排他的な複数の項目の中から1つだけを選択させる場合に使われるコントロールです。  
+
+[2] e-Words  
+複数の項目から一つを選択するための小さな丸いボタン状の入力要素。  
+選択肢の先頭に表示され、そのうちの一つだけを選択状態にすることができる。  
+「はい」「いいえ」など排他的な選択肢を選ばせるために用いられる。  
 
 - 対象となる選択肢の間に主従がなく概念的に等価  
 - 関係性としても並列なもの  
 - 選択肢が常に隠れずに見えているので、選択肢を並べて選びやすい場合  
+
 - 「メイン画像に指定」「サブ画像に指定」のように主従がある場合には妥当とは言えない  
 
 ### チェックボックス
@@ -811,6 +818,46 @@ wpf livet 使い方
 
 <https://twitter.com/komitsubo/status/1516544935423770624>
 >レビューはエンジニアの好き嫌いとか最近興味がある技術とかなどの思いの丈を語る為に提供されたしゃべり場ではなく、成果物の品質が基準に達しているかを確認する場という事が分かっていない人がホント多いなというが最近の感想。
+
+---
+
+## ワンセンテンステク
+
+このようなダイアログを表示する非同期処理があったとする。  
+警告文があれば表示して常にfalseを返却するのだが、以下のようにワンクッション挟まなければならない。  
+それがもどかしい。  
+
+``` C#
+    private async Task<bool> ConfirmAsync()
+    {
+        // 警告文を生成
+        string msg = CreateWarningMessage();
+        // 警告文があれば、ダイアログを表示する
+        if (!string.IsNullOrEmpty(msg))
+        {
+            // ダイアログを表示している間は処理を止める
+            await MessageDialogUtil.ShowWarningAsync(Messenger, msg);
+            // 警告なので常にfalse
+            return false;
+        }
+        // 警告文がなければ常にtrue
+        return true;
+    }
+```
+
+TaskのContinueWithを使うことでワンセンテンス化が可能になる。  
+ContinueWithにより、ダイアログを閉じたときに続けてfalseを返却するように記述することができる。  
+
+``` C#
+    private async Task<bool> ConfirmAsync()
+    {
+        // 警告文を生成
+        string msg = CreateWarningMessage();
+        // 警告文があれば、ダイアログを表示しつつ、falseを返却する。
+        return string.IsNullOrEmpty(msg)
+            || await MessageDialogUtil.ShowWarningAsync(Messenger, msg).ContinueWith(f => false);
+    }
+```
 
 ---
 
