・Dapperと匿名型の動的生成を用いた例 ・sql notの指定

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -861,6 +861,51 @@ ContinueWithにより、ダイアログを閉じたときに続けてfalseを返
 
 ---
 
+## Dapperと匿名型の動的生成を用いた例
+
+``` C#
+    Student student = new Student()
+    {
+        Code = "1",
+        ExclusionDateList = new List<DateTime,DateTime>(){
+            ("20200720","20200722"),
+            ("20200720","20200710")
+        }
+    };
+
+private SampleData GetSample(Condition condition)
+{
+    IDictionary<string, object> anonymousType = new ExpandoObject();
+    foreach (var s in condition
+        .GetType()
+        .GetProperties(BindingFlags.Instance | BindingFlags.Public))
+    {
+        anonymousType.Add(s.Name,  s.GetValue(condition));
+    }
+
+    StringBuilder selectQuery = new StringBuilder()
+        .AppendLine("SELECT ")
+        .AppendLine(" ~~~ ")
+        .AppendLine("FROM [Table]")
+        .AppendLine("WHERE [Code] = Code");
+    
+    StringBuilder whereQuery = new StringBuilder();
+    foreach(var item in condition.ExclusionDateList.Select((v,i) => (v,i))) {
+        whereQuery.AppendLine($"AND Date NOT BETWEEN @from{i} AND @to{i}");
+        anonymousType.Add($"from{i}", v.from);
+        anonymousType.Add($"to{i}", v.to);
+    }
+
+    return _DapperAction.GetFirstDataByQuery<SampleData>(
+        ConnectionTypes.Data,
+        selectQuery.AppendLine(whereQuery).ToString(),
+        (dynamic)anonymousType
+    );
+}
+```
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
@@ -917,3 +962,44 @@ for (int i = 1 ; i < 0 ; i++) {
 ・Bindingの書き方。プロパティ構文でプロパティに値を代入するやり方
 ・xamlのTrigger周りの整理
 ・xaml,livetのエラー
+
+
+
+left out join で右側が多かった時ってどうなる？
+なんか、毎回調べてる気がする。
+
+
+betweenってnot句を使うことができる。
+BETWEEN使わない時のNOTの書き方って？
+`<>`以外あるか？
+→あったは。割と知らなった・・・。
+
+``` sql
+select * from [Table]
+where BusinessDate NOT BETWEEN '2022-05-24' AND '2022-05-25'
+
+select * from [Table]
+where NOT (BusinessDate >= '2022-05-24' AND BusinessDate <= '2022-05-25')
+```
+
+[【SQL server】WHERE句で利用できる演算子](https://ameblo.jp/beginner-shelly/entry-10826554593.html)  
+
+``` sql
+select * from [Table]
+where NOT (BusinessDate = '2022-05-25')
+
+select * from [Table]
+where NOT BusinessDate = '2022-05-25'
+
+select * from [Table]
+where BusinessDate != '2022-05-25'
+```
+
+
+UPDATEの時にCASE文使うときにELSE用意しない場合ってどういう挙動するんだ？
+割と謎。
+
+
+drop tableやtruncateはDDL(テーブル構造)の命令に当たるので、RollBackは利かない。
+なので、droptableは最後の最後で実行すべし。
+
