・整理 ・列追加クエリの別パターンの疑問解消 ・PARTITION BYの記事追加

--- a/DB・SQL/SQLServer/テーブル構造.md
+++ b/DB・SQL/SQLServer/テーブル構造.md
@@ -34,3 +34,14 @@ FROM
     idx_cols.object_id = cols.object_id
     AND idx_cols.column_id = cols.column_id
 ```
+
+---
+
+## 対象カラムが存在するかどうかをチェックするクエリ
+
+``` SQL
+    SELECT *
+    FROM   [Database].sys.columns
+    WHERE  Name = N'FieldName'
+    AND    Object_ID = OBJECT_ID(N'[Database].[dbo].[Table]')
+```
