--- a/DB・SQL/SQLServer/列追加.md
+++ b/DB・SQL/SQLServer/列追加.md
@@ -35,6 +35,7 @@ BEGIN TRY
         Tel nvarchar(255) NOT NULL DEFAULT (),
         CONSTRAINT TBL_USER_PK PRIMARY KEY CLUSTERED (UserNo)
     )
+    -- コメントも必要に応じて入れる
 
     -- ④テンポラリテーブルからバックアップデータを復元
     INSERT INTO TBL_USER
@@ -80,11 +81,20 @@ END CATCH
 テーブル名を変更した時、コメントも影響受けるのだろうか？  
 そこもしっかり把握していくか。  
 
+テーブルを生成した地点で主キーを設定しても問題ない。  
+テーブル名を変更しても問題なく主キーが有効であった。  
+コメントはテーブル名を指定しないといけないので、元のテーブルが新しくなった後にやらないと駄目なので、テーブル生成と同じタイミングでやるならテーブル名を全部書き換えないといけない。  
+それをやっていいなら生成と同時にできるけど、そうじゃないなら最後にやるべし。  
+
 ``` sql : パターン2
 BEGIN TRAN
 BEGIN TRY
     -- ①新テーブルの作成
-    CREATE TABLE [Dst_Table] ()
+    CREATE TABLE [Dst_Table] (
+        filed,
+        ~~~~,
+        CONSTRAINT Dst_Table_PKC PRIMARY KEY CLUSTERED (Code)
+    )
 
     -- ②新テーブルへデータ投入
     INSERT INTO [Dst_Table]()
@@ -94,12 +104,9 @@ BEGIN TRY
     DROP TABLE [Src_Table]
 
     -- ④新テーブルをリネームして元テーブル名に変更
-    EXEC sp_rename '[Dst_Table]', '[Src_Table]';
+    EXEC sp_rename 'Dst_Table', 'Src_Table';
 
-    -- ⑤主キーの作成
-    ALTER TABLE [dbo].[Src_Table]  ADD CONSTRAINT [Src_Table_PKC] PRIMARY KEY ([Code])
-
-    -- ⑥コメントの作成等
+    -- ⑤コメントの作成等
     EXECUTE sp_addextendedproperty N'MS_Description', N'コード', N'SCHEMA', N'dbo', N'TABLE', N'Src_Table', N'COLUMN', N'Code'
 
     COMMIT TRAN
