--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -926,6 +926,7 @@ UPDATEの時にCASE文使うときにELSE用意しない場合ってどういう
 割と謎。
 
 
+[DELETE文 TRUNCATE文 DROP文の違い(SQL構文)](https://www.earthlink.co.jp/engineerblog/technology-engineerblog/2680/)  
 drop tableやtruncateはDDL(テーブル構造)の命令に当たるので、RollBackは利かない。
 なので、droptableは最後の最後で実行すべし。
 
