--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -861,6 +861,82 @@ ContinueWithにより、ダイアログを閉じたときに続けてfalseを返
 
 ---
 
+## Next.js
+
+[1]  
+Reactベースのフロントエンドフレームワーク  
+
+[2]
+Nextとは、Reactファイルを使ったアプリケーションフレームワークです。  
+NextとReactの最大の違いはフロントエンドアプリケーションとして起動できるどうかです。  
+React.jsはサーバ機能はありません。  
+
+- React.jsにできること  
+  1. jQueryのようにDOMの値によって表示を変えられる  
+  2. Next以外のアプリケーションにも実装できる  
+
+- Next.jsでできること  
+  1. サーバ機能 → webページの取得、表示  
+  2. アプリケーションの状態を保持 → ユーザごとの表示  
+  3. ルーティング → いろんなページを作れる  
+  4. 画像やファイルへのアクセス → 動的なページを作成できる  
+
+- Next.jsとReact.jsの違い  
+  1. Next.jsはサーバ機能があり、React.jsはサーバ機能はない  
+  2. Next.jsはアプリケーションフレームワーク、 React.jsはviewライブラリ  
+  3. Next.jsは一部分で導入することはできない、React.jsは一部分に導入することが可能  
+
+[【2022年】Next.jsとReactの違い・メリット・デメリットを比較](https://tech-parrot.com/programming/next-js-react-js-tigai/)  
+
+## Nuxt.js
+
+[1]  
+Vue.jsベースのフロントエンドフレームワーク  
+
+[2]  
+Nuxtとは、Vueファイルを使ったアプリケーションフレームワークです。  
+NuxtとVueの最大の違いは、フロントエンドアプリケーションとして起動可能かどうかです。  
+Vue.jsはサーバー機能はありません。  
+
+- Vueでできること  
+  1. jQueryのようにDOMの値によって表示を変えられる  
+  2. Nuxt以外のアプリケーションにも実装できる  
+
+- Nuxtでできること  
+  1. サーバ機能を利用することができる  
+  2. アプリケーションの状態を保持することができる  
+  3. ルーティングを自動生成できる  
+  4. 画像リソースへ簡単にアクセスできる  
+
+- NuxtとVueの違い  
+  1. Nuxtはサーバ機能があり、Vueはサーバ機能はない  
+  2. Nuxtはアプリケーションフレームワーク、Vueはviewライブラリ  
+  3. Nuxtは一部分で導入することはできない、Vueは一部分に導入することが可能  
+
+[【2022年版】NuxtとVueの違い・メリット・デメリットを徹底比較](https://tech-parrot.com/vue/nuxt-vue-tigai/)  
+
+## Nuxt.js vs Next.js
+
+つまるところ、どちらもフロントエンドのフレームワークで、サーバー機能があって、それぞれVueとReactのペアで使用するって感じかな。  
+
+[Nuxt.jsとNext.jsを比較して、表とグラフにまとめてみた!](https://qiita.com/dtakkiy/items/7d79c153860fbda102a7)  
+
+## Microsoft Teams
+
+基本的には Slack のようなビジネスチャットツールの事らしい。  
+ただ、Microsoft製なのでOffice 365との各種連携機能が充実している。  
+解説サイトによれば、「業務に必要なあらゆるリソースと繋がったチャットツール」とのこと。  
+
+[今さら聞けない 「Microsoft Teams」 とは？メリットを徹底解説！](https://www.softbanktech.co.jp/special/blog/sbt_sbt/2020/0005/)  
+
+読み方は「チームズ」  
+チーム「ス」ではないことに注意。  
+これは公式も強調している。  
+
+[マイクロソフト、Teamsの新機能「発表者モード」などを解説、「Teamsの呼び方は“チームズ”」](https://internet.watch.impress.co.jp/docs/news/1321427.html#:~:text=%E3%81%BE%E3%81%9F%E3%80%81%E3%82%BB%E3%83%83%E3%82%B7%E3%83%A7%E3%83%B3%E3%81%AE%E3%81%AA%E3%81%8B%E3%81%A7%E3%81%AF,%E3%81%8C%E6%94%B9%E3%82%81%E3%81%A6%E5%BC%B7%E8%AA%BF%E3%81%95%E3%82%8C%E3%81%9F%E3%80%82)  
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
