・groupbyで1件目 ・分母分子のサンプル

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -937,6 +937,68 @@ Vue.jsはサーバー機能はありません。
 
 ---
 
+## QMS (Quality Management System)
+
+品質マネジメントシステム  
+製造販売業者及び製造業者に遵守が求められている「製造管理及び品質管理の基準」に係る省令であり、医療機器及び体外診断用医薬品の承認・認証に際しての基準の一つとなっています。  
+
+---
+
+## GROUP BY した結果の1件目を取得する方法
+
+子テーブルから親テーブルを作る必要があるときに、コードで絞った結果の1件目だけを親テーブルにINSERTしたい状況に遭遇した時のまとめ。  
+「group by 先頭1件」で検索。  
+Rank() Over構文を使うらしい。  
+
+[SELECT 文　GROUP　での1件目を取得](https://oshiete.goo.ne.jp/qa/3819843.html)  
+
+``` sql
+CREATE TABLE [Test]
+(
+    [Id] INT NOT NULL IDENTITY(1,1) PRIMARY KEY,  
+    [Code] INT,  
+    [Name] nvarchar(255)
+);
+
+INSERT INTO [Test]
+VALUES
+     ( 1 ,'A')
+    ,( 1 ,'B')
+    ,( 1 ,'C')
+    ,( 1 ,'D')
+    ,( 2 ,'F')
+    ,( 2 ,'G')
+    ,( 2 ,'H')
+    ,( 3 ,'X')
+    ,( 3 ,'Y')
+    ,( 3 ,'Z')
+```
+
+``` sql
+SELECT
+    [X].[Code],
+    [X].[Name]
+FROM
+(
+    SELECT
+        RANK() OVER(PARTITION BY [Code] ORDER BY [Name]) AS rk,
+        [Code],
+        [Name]
+    FROM [Test]
+) AS [X]
+WHERE rk=1
+
+--1 A
+--2 F
+--3 X
+```
+
+---
+
+## Fixブランチをリベースした後にテストブランチにマージして、更にリベースしてマージすると同じ修正が2回も入るのを確認したのでリベースは最初の一回のみに限る
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
